(library
 (name lib_view)
 (wrapped false)
 (preprocess
  (pps brisk-reconciler.ppx lwt_ppx))
 (modules :standard \ Revery7Guis)
 (libraries Revery))

(executable
 (name Revery7Guis)
 (public_name Revery7Guis)
 (ocamlc_flags
  (:standard -custom))
 (modules Revery7Guis)
 (preprocess
  (pps brisk-reconciler.ppx lwt_ppx))
 (libraries Revery lib_view))

(install
 (section bin)
 (package Revery7Guis)
 (files Roboto-Regular.ttf))
