(library
 (name lib_view)
  (ocamlc_flags (:standard -custom))
 (modes native byte)
 (public_name Revery7Guis.lib_view)
 (preprocess
  (pps brisk-reconciler.ppx lwt_ppx))
 ; (modules :standard \ Revery7Guis)
 (libraries Revery))

;(executable
; (name Revery7Guis)
; (public_name Revery7Guis)
; (ocamlc_flags
;  (:standard -custom))
; (modules Revery7Guis)
; (preprocess
;  (pps brisk-reconciler.ppx lwt_ppx))
; (libraries Revery dynlink lib_view))

(install
 (section bin)
 (package Revery7Guis)
 (files Roboto-Regular.ttf))
